# ember-writing-studio

./: .gitignore  README.md  index.html  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
