[package]
name = "ember-writing-studio"
version = "0.1.0"
description = "火种写作台"
authors = ["火种写作台"]
edition = "2021"

[lib]
name = "ember_writing_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
